# Pulse-Claude-Code-Analytics

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  build-dist.ps1  build.rs  cliff.toml  llms.txt  package.json  run.sh
.cargo/: config.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  release.yml  upstream-freshness.yml
docs/: analyzers.md  architecture.md  codex-model-catalog.md  codex-rich-presence-upstream.md  context-tracking.md  cost-calculation.md  discord-assets.md  fable-5.md  index.md  opus-4-7-variants.md  opus-4-8.md  plan-detection.md  releasing.md  sonnet-5.md  troubleshooting.md  update-checks.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.svelte  main.ts  vite-env.d.ts
frontend/src/components/: BudgetCockpit.svelte  Chart.svelte  CostTimeline.svelte  ExportModal.svelte  Heatmap.svelte  ProgressBar.svelte  ProviderToggle.svelte  PulseMark.svelte  Select.svelte  SessionCard.svelte  Sidebar.svelte  Sparkline.svelte  StatCard.svelte  Toast.svelte  TopBar.svelte  UpdateBanner.svelte
frontend/src/lib/: api.ts  export.ts  provider.ts  rpArt.ts  stores.ts  utils.ts
frontend/src/styles/: animations.css  fonts.css  global.css
frontend/src/views/: Context.svelte  Costs.svelte  Dashboard.svelte  Discord.svelte  Reports.svelte  Sessions.svelte  Settings.svelte
scripts/: audit-rust.ps1  build.sh  check-codex-rich-presence-upstream.ps1  check-codex-rich-presence-upstream.sh  check-release-contract.ps1  check-windows-sbom.ps1  codex-vendor-contract.json  extract-changelog-section.py  install.ps1  install.sh  new-windows-sbom.ps1  release-assets.ps1  release-contract.json  release-platform-assets.ps1  rustsec-accepted-warnings.json  start.ps1  start.sh  stop.ps1  stop.sh  update-codex-rich-presence.ps1  update-codex-rich-presence.sh
src/: activity_target.rs  app.rs  chrome_session.rs  cli.rs  config.rs  cost.rs  discord.rs  lib.rs  main.rs  metrics.rs  plan.rs  process_guard.rs  provider.rs  session.rs  sound.rs  ui.rs  usage.rs  util.rs  workflow_state.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  dev_bridge.rs  lib.rs  live.rs  main.rs  report.rs  report_template.rs  update_check.rs
src-tauri/src/analyzers/: cache_health.rs  inflection.rs  mod.rs  model_routing.rs  prompt_complexity.rs  recommendations.rs  session_health.rs  session_trace.rs  tool_frequency.rs  trace_overview.rs
src-tauri/tests/: report_html.rs  reports_e2e.rs
src/codex/: UPSTREAM.json  app.rs  config.rs  cost.rs  discord.rs  mod.rs  model.rs  model_catalog.json  process.rs  process_guard.rs  session.rs  util.rs
src/codex/session/: activity.rs  parser.rs
src/codex/telemetry/: limits.rs  plan.rs  service_tier.rs
tests/: codex_upstream_contract.rs  daemon_e2e.rs  index.md  release_scripts.rs  setup.ts
tests/components/: BudgetCockpit.test.ts  Context.test.ts  CostTimeline.test.ts  Costs.test.ts  Dashboard.test.ts  Discord.test.ts  ExportModal.test.ts  PulseMark.test.ts  Reports.test.ts  SessionCard.test.ts  Sessions.test.ts  Settings.test.ts  UpdateBanner.test.ts
tests/fixtures/: ChartStub.svelte
tests/integration/: phase5-flow.test.ts  poll-flow.test.ts  tauri-mock.test.ts
tests/unit/: utils.test.ts
tests/visual/: verify-responsive.mjs
