[package]
name = "cc-discord-presence"
version = "2.0.0"
edition = "2024"
description = "Discord Rich Presence for Claude Code sessions"
license = "MIT"
keywords = ["claude-code", "discord", "rich-presence", "cli", "tui"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.51", features = ["derive"] }
crossterm = "0.29.0"
ctrlc = "3.5.1"
dirs = "6.0.0"
discord-rich-presence = "1.1.0"
fs2 = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "time"] }
ureq = { version = "2.12.1", default-features = true }
walkdir = "2.5.0"
viuer = { version = "0.11.0", features = ["print-file"] }

[dev-dependencies]
tempfile = "3.23.0"
